# DigitalBreakthrough

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.chart/: Chart.yaml  values.yaml
.chart/templates/: deployment.yaml  service.yaml
.docker/nginx/: nginx.conf
ML/: __init__.py  main.py  startups.csv
parsers/: __init__.py  main.py
parsers/models/: products.py
shemas/: __init__.py  presentation.py
